Functions to install Dat + node

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(dat_clone)
 export(dat_create)
+export(dat_install)
 export(dat_log)
 export(dat_pull)
 export(dat_share)
@@ -13,6 +14,10 @@ export(enquo)
 export(ensym)
 export(expr)
 export(exprs)
+export(install_dat)
+export(install_linux)
+export(install_mac)
+export(install_windows)
 export(quo)
 export(quos)
 export(sym)
