--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ sudo: false
 cache: packages
 install:
   npm install -g dat
+  R -e 'install.packages("devtools")'
+  R -e 'install.packages("rjson")'
 after_success:
   - Rscript -e 'covr::codecov()'
 
