--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,10 @@
 Package: datr
-Title: Interface with the Dat p2p network
-Version: 0.0.9
+Title: Dat Protocol Interface
+Version: 0.1.0
 Authors@R: person("Chris", "Hartgerink", , "chris@libscie.org", c("aut", "cre"))
 Description: The datr package provides R users with a way to interface with 
-    the Dat p2p network. Basic functionality includes cloning folders hosted on
-    the network, sharing your own files, downloading just metadata and 
-    retrieving parts of datasets. Additional functionality specific to R is 
-    likely to be implemented in due time. 
+    the Dat p2p network. Currently, the package allows you to clone Dat archives
+    from the network, share your own files, and install an R package from a Dat.
 License: GPL-3
 Depends: 
     R (>= 3.1)
