--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,5 @@ ByteCompile: true
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+URL: https://github.com/libscie/datr
+BugReports: https://github.com/libscie/datr/issues
