--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(clone_dat)
 export(create_dat)
 export(dat_install)
+export(dat_version)
 export(install_dat)
 export(log_dat)
 export(pull_dat)
